# SenCID

./: LICENSE  README.md  SenCID.yaml  setup.cfg
SenCID/: DataPro.py  Pred.py  __main__.py  api.py  utils.py
SenCID/demo/: SenCID_tutorial.ipynb
SenCID/model/: SID1.pkl  SID1_L.pkl  SID2.pkl  SID2_L.pkl  SID3.pkl  SID3_L.pkl  SID4.pkl  SID4_L.pkl  SID5.pkl  SID5_L.pkl  SID6.pkl  SID6_L.pkl  recommend_model.pkl
SenCID/resource/: seneset.txt
