[bumpversion]
current_version = 1.0.0
commit = True
tag = True

[bumpversion:file:VERSION.txt]
search = {current_version}
replace = {new_version}

[metadata]
name = SenCID
version = file: VERSION.txt
description = Senescent Cell Identification
long_description = file: README.md
author = Wanyu Tao, Jing-Dong J. Han
author_email = wytao@pku.edu.cn
license = MIT
#url = https://github.com/SherryMiyano/SenCID
#project_urls = 
#	Pipeline = https://github.com/theislab/scib-pipeline
#	Reproducibility = https://theislab.github.io/scib-reproducibility
#	Bug Tracker = https://github.com/theislab/scib/issues
keywords = 
	senescence
  transcriptome
	machine learning
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[bdist_wheel]
build_number = 1

[options]
packages = 
	SenCID
python_requires = >=3.6
install_requires = 
	numpy>=1.19.1
	pandas
	scanpy>=1.6.0
	anndata>=0.7.2
	tensorflow>=2.0,<2.5
 	keras>=2.4,<2.6
 	dca>=0.3.2
	h5py
 	six>=1.10.0
	scipy
	scikit-learn
	pyyaml<=5.4.1
	kopt
  	joblib
  	absl-py>=0.11.0
zip_safe = False

[options.package_data]
SenCID = 
	resource/*.txt
 	model/*pkl

[options.entry_points]
console_scripts =
	SenCID = SenCID.__main__:main
